--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -7,9 +7,11 @@
 }
 
 body {
-
-    
     background: #f4f4f9;
+}
+h1{
+    margin: 20px;
+    text-align: center;
 }
 .dashboard{
     display: flex;
@@ -19,12 +21,14 @@ body {
 
 /* Sidebar */
 .sidebar {
-    width: 250px;
+    width: 18vw;
     background: #23282d;
     color: #fff;
     display: flex;
     flex-direction: column;
     padding: 20px 0;
+    position: fixed;
+    min-height: 100vh;
 }
 
 .logo {
@@ -67,6 +71,8 @@ body {
 .main-content {
     flex-grow: 1;
     padding: 20px;
+    margin-left: 18vw;
+    width: 82vw;
 }
 
 .header {
@@ -80,6 +86,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
+    width: 100%;
 }
 
 .card {
