--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -147,6 +147,7 @@ form input[type="number"],
 form input[type="date"],
 form input[type="time"],
 form input[type="search"],
+form input[type="tel"],
 form select,
 form textarea {
     width: 100%;
