--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -283,31 +283,36 @@ form .table-container {
     background: #005f8a;
 }
 /*Paginacion */
+
 .paginacion {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-  }
-  
-  .paginacion a {
-    margin: 0 5px;
-    padding: 8px 16px;
+    margin-bottom: 20px;  /* Agregar margen inferior para separación de la tabla */
+}
+
+.paginacion a {
+    margin: 0 8px;  /* Mayor margen horizontal entre los elementos */
+    padding: 10px 18px;  /* Aumento de tamaño para una mejor visibilidad */
     text-decoration: none;
     color: #000;
     background-color: #fff;
     border: 1px solid #000;
     border-radius: 4px;
-    transition: background-color 0.3s;
-  }
-  
-  .paginacion a:hover {
-    background-color: #000;
-    color: #fff;
-  }
-  
-  .paginacion a.activo {
-    background-color: #000;
-    color: #fff;
-  }
-  
+    transition: background-color 0.3s, color 0.3s;  /* Mejor transición */
+}
 
+.paginacion a:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.paginacion a.activo {
+    background-color: #000;
+    color: #fff;
+}
+
+/* Separación entre la tabla y la paginación */
+table {
+    margin-bottom: 30px;  /* Añadir un margen en la parte inferior de la tabla */
+}
