--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -30,7 +30,7 @@ h1{
     padding: 20px 0;
     position: fixed;
     min-height: 100vh;
-    overflow-y: auto;  /
+    overflow-y: auto; 
 }
 
 .logo {
