--- a/css/secundario.css
+++ b/css/secundario.css
@@ -14,13 +14,12 @@
   padding: 30px;
   width: 450px;
   border-radius: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 .form H1 {
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 2.5rem;
 }
 
@@ -51,10 +50,9 @@
 
 .input {
   margin-left: 10px;
-  border-radius: 10px;
-  border: none;
   width: 85%;
-  height: 100%;
+  border: none;
+
 }
 
 .input:focus {
@@ -146,7 +144,6 @@
   margin-top: -10px;
   margin-bottom: -5px;
   line-height: 1.5;
-
   font-weight: bold;
 }
 .error-message {
@@ -155,70 +152,6 @@
   padding-left: 10px;
   display: none;
   margin-bottom: -10px;
-}
-/* Loader  */
-.loader {
-  --dim: 3rem;
-  width: var(--dim);
-  height: var(--dim);
-  position: relative;
-  animation: spin988 2s linear infinite;
-}
-
-.loader .circle {
-  --color: #333;
-  --dim: 1.2rem;
-  width: var(--dim);
-  height: var(--dim);
-  background-color: var(--color);
-  border-radius: 50%;
-  position: absolute;
-}
-
-.loader .circle:nth-child(1) {
-  top: 0;
-  left: 0;
-}
-
-.loader .circle:nth-child(2) {
-  top: 0;
-  right: 0;
-}
-
-.loader .circle:nth-child(3) {
-  bottom: 0;
-  left: 0;
-}
-
-.loader .circle:nth-child(4) {
-  bottom: 0;
-  right: 0;
-}
-
-@keyframes spin988 {
-  0% {
-    transform: scale(1) rotate(0);
-  }
-
-  20%,
-  25% {
-    transform: scale(1.3) rotate(90deg);
-  }
-
-  45%,
-  50% {
-    transform: scale(1) rotate(180deg);
-  }
-
-  70%,
-  75% {
-    transform: scale(1.3) rotate(270deg);
-  }
-
-  95%,
-  100% {
-    transform: scale(1) rotate(360deg);
-  }
 }
 
 .error-message{
@@ -357,4 +290,78 @@
 
 .error__close path {
   fill: #fff;
+}
+
+
+/* Main Content */
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+  margin-left: 18vw;
+  width: 82vw;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+/* Sidebar */
+.sidebar {
+  width: 18vw;
+  background: #23282d;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0;
+  position: fixed;
+  min-height: 100vh;
+}
+
+.logo {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+}
+
+.menu li {
+  margin: 10px 0;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #ddd;
+  padding: 10px 20px;
+  display: block;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+
+.menu a:hover {
+  background: #0073aa;
+  color: #fff;
+}
+.rol{
+  padding: 0px 20px;
+  font-weight: bold;
+}
+.dashboard{
+  display: flex;
+  grid-template-columns: 1fr 1fr ;
+  height: 100vh;
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+body {
+  background: #f4f4f9;
 }
